--- a/css/styles.css
+++ b/css/styles.css
@@ -37,92 +37,15 @@
   font-weight: normal;
   font-style: normal;
 }
-/* html,
-body,
-div,
-span,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-abbr,
-address,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-samp,
-small,
-strong,
-sub,
-sup,
-var,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-button,
-fieldset,
-form,
-input,
-label,
-legend,
-textarea,
-select,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-a,
-b,
-i,
-u,
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-menu,
-nav,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  font-size: 100%;
-  font-style: normal;
-  font-weight: normal;
-  line-height: inherit;
-  vertical-align: baseline;
-  background: none;
-  white-space: normal;
-} */
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+li {
+  list-style: none;
 }
 
 form {
@@ -158,25 +81,6 @@ img {
   margin: 0 auto;
 }
 
-.site-text {
-  text-align: center;
-  font-size: 72px;
-  font-family: "Kaushan Script";
-  color: #fff;
-  margin: 0 0 50px 0;
-}
-
-.site-title {
-  font-size: 150px;
-  text-align: center;
-  text-transform: uppercase;
-
-  padding: 0px 273px;
-  color: #fff;
-  font-family: "Montserrat-Bold";
-  margin: 0 0 120px;
-}
-
 .baner {
   background: linear-gradient(
       0deg,
@@ -204,7 +108,7 @@ img {
   display: flex;
   justify-content: space-between;
   padding-top: 25px;
-  padding-bottom: 170px;
+  padding-bottom: 165px;
 }
 
 .navigation__logo {
@@ -230,12 +134,14 @@ img {
     transform: rotate(360deg);
   }
 }
+
 .navigation__logo:hover {
   color: rgb(252, 227, 138);
 }
 
 .menu__item {
   list-style: none;
+  position: relative;
 }
 
 .menu {
@@ -254,10 +160,10 @@ img {
   text-decoration: none;
 }
 
-.poshuk1::after {
+.menu__item--after::after {
   display: block;
   content: "";
-  width: 20px;
+  width: 50px;
   height: 3px;
   background-color: rgb(252, 227, 138);
   position: absolute;
@@ -266,47 +172,61 @@ img {
   transition: 200ms linear;
 }
 
-.menu__item:hover.poshuk1::after {
+.menu__item:hover.menu__item--after::after {
   opacity: 1;
 }
 
-.poshuk {
-  fill: #fff;
+.menu__item--after-service::after {
+  width: 62px;
 }
 
-.poshuk:hover {
-  fill: rgb(252, 227, 138);
-  transition: color 200ms linear;
+.menu__item--after-blog::after {
+  width: 43px;
 }
 
-.coshuk {
-  fill: #fff;
-  transition: color 200ms linear;
+.menu__item--after-contact::after {
+  width: 67px;
 }
 
-.coshuk1::after {
-  display: block;
-  content: "";
+.menu__item--after-coshuk::after {
   width: 20px;
-  height: 3px;
-  background-color: rgb(252, 227, 138);
-  position: absolute;
-  bottom: -12px;
-  opacity: 0;
-  transition: 200ms linear;
 }
 
-.menu__item:hover.coshuk1::after {
-  opacity: 1;
+.menu__item--after-poshuk::after {
+  width: 20px;
 }
 
-.coshuk:hover {
+.menu__item-svg {
+  fill: #fff;
+  transition: color 200ms linear;
+}
+
+.menu__item-svg:hover {
   fill: rgb(252, 227, 138);
 }
 
 .menu__item-linc:hover,
 .menu__item-linc:focus {
   color: rgb(252, 227, 138);
+}
+
+.slogan {
+  text-align: center;
+  font-size: 72px;
+  font-family: "Kaushan Script";
+  color: #fff;
+  padding: 0 0 38px 0;
+}
+
+.title {
+  margin: 0;
+  font-size: 150px;
+  text-align: center;
+  text-transform: uppercase;
+
+  padding: 0px 273px 110px;
+  color: #fff;
+  font-family: "Montserrat-Bold";
 }
 
 .btn {
@@ -322,109 +242,26 @@ img {
   height: 44px;
   color: #fff;
   text-transform: uppercase;
-  margin-bottom: 220px;
-}
-
-.menu__item {
-  position: relative;
-}
-
-.about::after {
-  display: block;
-  content: "";
-  width: 50px;
-  height: 3px;
-  background-color: rgb(252, 227, 138);
-  position: absolute;
-  bottom: -12px;
-  opacity: 0;
-  transition: 200ms linear;
-}
-
-.menu__item:hover.about::after {
-  opacity: 1;
-}
-
-.service::after {
-  display: block;
-  content: "";
-  width: 62px;
-  height: 3px;
-  background-color: rgb(252, 227, 138);
-  position: absolute;
-  bottom: -12px;
-  transition: 200ms linear;
-  opacity: 0;
-}
-
-.menu__item:hover.service::after {
-  opacity: 1;
-}
-
-.work::after {
-  display: block;
-  content: "";
-  width: 50px;
-  height: 3px;
-  background-color: rgb(252, 227, 138);
-  position: absolute;
-  bottom: -12px;
-  transition: 200ms linear;
-  opacity: 0;
-}
-
-.menu__item:hover.work::after {
-  opacity: 1;
-}
-
-.blog::after {
-  display: block;
-  content: "";
-  width: 43px;
-  height: 3px;
-  background-color: rgb(252, 227, 138);
-  position: absolute;
-  bottom: -12px;
-  transition: 200ms linear;
-  opacity: 0;
-}
-
-.menu__item:hover.blog::after {
-  opacity: 1;
-}
-
-.contact::after {
-  display: block;
-  content: "";
-  width: 67px;
-  height: 3px;
-  background-color: rgb(252, 227, 138);
-  position: absolute;
-  bottom: -12px;
-  transition: 200ms linear;
-  opacity: 0;
-}
-
-.menu__item:hover.contact::after {
-  opacity: 1;
+  margin-bottom: 205px;
+  cursor: pointer;
 }
 
 /* SECTION AMAZING */
 
-.amazing {
-  margin-bottom: 100px;
+.services {
+  padding: 0 0 100px;
 }
 
-.amazing-text {
+.services__text {
   text-align: center;
   font-size: 24px;
   font-family: "Kaushan Script";
   color: rgb(51, 51, 51);
   line-height: 1.2;
-  padding-bottom: 20px;
+  padding: 40px 0px 20px;
 }
 
-.amazing-title {
+.services__title {
   text-align: center;
   font-size: 30px;
   color: rgb(51, 51, 51);
@@ -434,7 +271,7 @@ img {
   margin-bottom: 110px;
 }
 
-.amazing-title::after {
+.services__title::after {
   position: relative;
   top: 40px;
   content: "";
@@ -445,11 +282,14 @@ img {
   background-color: #f38181;
 }
 
-.amazing-list li {
-  list-style: none;
+.list-services {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
 }
 
-.amazing-list-item-title {
+.list-services__item-title {
   font-size: 14px;
   font-family: "Montserrat-Regular";
   color: rgb(51, 51, 51);
@@ -458,7 +298,7 @@ img {
   margin-bottom: 21px;
 }
 
-.amazing-list-item-text {
+.list-services__item-text {
   font-family: "Roboto-Regular";
   font-size: 15px;
 
@@ -466,35 +306,52 @@ img {
   line-height: 1.6;
 }
 
-.amazing-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0;
-}
-
-.amazing-list-item {
+.list-services__item {
   position: relative;
   width: 392px;
   margin-bottom: 102px;
   padding-left: 90px;
 }
 
-.amazing-list-item:nth-last-child(-n + 3) {
+.list-services__item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
 
-.clock::before {
+.list-services__item::before {
   display: block;
   content: "";
   width: 89px;
   height: 89px;
-  background-image: url(../img/ALARM.svg);
+
   position: absolute;
   background-repeat: no-repeat;
   background-position: center;
   left: 0px;
   top: -24px;
+}
+
+.list-services__item--clock::before {
+  background-image: url(../img/ALARM.svg);
+}
+
+.list-services__item--web::before {
+  background-image: url(../img/LINEGRAPH.svg);
+}
+
+.list-services__item--creativity::before {
+  background-image: url(../img/COMPUTEROK.svg);
+}
+
+.list-services__item--seo::before {
+  background-image: url(../img/BOOK2.svg);
+}
+
+.list-services__item--css::before {
+  background-image: url(../img/HOME.svg);
+}
+
+.list-services__item--digital::before {
+  background-image: url(../img/IMAGE.svg);
 }
 
 .web::before {
@@ -510,62 +367,10 @@ img {
   top: -24px;
 }
 
-.creativity::before {
-  display: block;
-  content: "";
-  width: 89px;
-  height: 89px;
-  background-image: url(../img/COMPUTEROK.svg);
-  position: absolute;
-  background-repeat: no-repeat;
-  background-position: center;
-  left: 0px;
-  top: -24px;
-}
-
-.seo::before {
-  display: block;
-  content: "";
-  width: 89px;
-  height: 89px;
-  background-image: url(../img/BOOK2.svg);
-  position: absolute;
-  background-repeat: no-repeat;
-  background-position: center;
-  left: 0px;
-  top: -24px;
-}
-
-.css::before {
-  display: block;
-  content: "";
-  width: 89px;
-  height: 89px;
-  background-image: url(../img/HOME.svg);
-  position: absolute;
-  background-repeat: no-repeat;
-  background-position: center;
-  left: 0px;
-  top: -24px;
-}
-
-.digital::before {
-  display: block;
-  content: "";
-  width: 89px;
-  height: 89px;
-  background-image: url(../img/IMAGE.svg);
-  position: absolute;
-  background-repeat: no-repeat;
-  background-position: center;
-  left: 0px;
-  top: -24px;
-}
-
 /* SECTION THEAM */
 
 .theam {
-  margin-bottom: 82px;
+  padding: 0 0 82px;
 }
 
 .theam-text {
@@ -587,7 +392,7 @@ img {
   margin-bottom: 110px;
 }
 
-.theam-title::after {
+.theam-title--after::after {
   position: relative;
   top: 40px;
   content: "";
@@ -616,7 +421,7 @@ img {
   position: relative;
 }
 
-.theam-img-name {
+.theam-list__item-name {
   font-size: 14px;
   font-family: "Montserrat-Regular";
   color: rgb(51, 51, 51);
@@ -627,7 +432,7 @@ img {
   margin-bottom: 16px;
 }
 
-.theam-img-position {
+.theam-list__item-position {
   font-size: 15px;
   font-family: "Roboto-Light-italic";
   color: rgb(153, 153, 153);
@@ -644,16 +449,16 @@ img {
   text-decoration: none;
 }
 
-.theam-list-item {
+.theam-list__item {
   position: relative;
 }
 
-.theam-img {
+.theam-list__item-img {
   position: relative;
   z-index: 1;
 }
 
-.theam-box {
+.theam-list__item-box {
   background-color: rgb(149, 225, 211);
   position: absolute;
   top: 0;
@@ -663,7 +468,7 @@ img {
   z-index: 0;
 }
 
-.gradient-box {
+.theam-list__item-gradient {
   position: absolute;
   top: 0;
   left: 0;
@@ -684,21 +489,21 @@ img {
   transition: 200ms linear;
 }
 
-.theam-list-item:hover .theam-img {
+.theam-list__item:hover .theam-list__item-img {
   transition: 200ms linear;
   transform: translate(-10px, -10px);
 }
 
-.gradient-box {
+.theam-list__item-gradient {
   transition: 200ms linear;
 }
 
-.theam-list-item:hover .gradient-box {
+.theam-list__item:hover .theam-list__item-gradient {
   opacity: 0.8;
   transform: translate(-10px, -10px);
 }
 
-.theam-list-item:hover .socials {
+.theam-list__item:hover .socials {
   opacity: 1;
 }
 
@@ -735,51 +540,12 @@ img {
   margin-right: 1px;
 
   background-color: rgb(252, 227, 138);
-}
-
-/* .facebook {
-  background-image: url();
-  background-repeat: no-repeat;
-  background-position: center;
   transition: 200ms linear;
 }
 
-.facebook:hover {
-  background-color: #95e1d3;
+.socials__item-linc:hover {
+  background: #f38181;
 }
-
-.twitter {
-  background-image: url(../img/twitter.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: 200ms linear;
-}
-
-.twitter:hover {
-  background-color: #95e1d3;
-}
-
-.pinterest {
-  background-image: url(../img/pinterest.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: 200ms linear;
-}
-
-.pinterest:hover {
-  background-color: #95e1d3;
-}
-
-.instagram {
-  background-image: url(../img/instagram.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: 200ms linear;
-}
-
-.instagram:hover {
-  background-color: #95e1d3;
-} */
 
 /* FOOTER */
 
@@ -810,6 +576,7 @@ img {
   border: 1px solid rgb(229, 229, 229);
   width: 230px;
   height: 40px;
+  outline: none;
 }
 
 .button {
@@ -820,4 +587,5 @@ img {
   height: 40px;
   border: none;
   background-color: #95e1d3;
+  cursor: pointer;
 }
